gitops/manifests/podinfo/service-podinfo.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-svc
  namespace: podinfo
  labels:
    app: podinfo
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
    - name: http
      port: 9898
      targetPort: 9898
