gitops/manifests/podinfo/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: podinfo
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
