gitops/manifests/podinfo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-route
  namespace: podinfo
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: ingress-system
      sectionName: https-podinfo
  hostnames:
    - podinfo.ahaouari.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: podinfo-svc
          port: 9898
