gitops/manifests/podinfo/networkpolicy-podinfo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: podinfo-netpol
  namespace: podinfo
  labels:
    app: podinfo
spec:
  podSelector:
    matchLabels:
      app: podinfo
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 9898
  egress:
    # DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # Redis
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
